2001-11-24  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* Audio.h: the other is_track_playing didn't check if midi==NULL either

2001-11-23  Dominik Reichardt <gigdr@tesionmail.de>
	* Faq, Readme deleted
	* docs/ added FAQ.html and ReadMe.html
	* docs/images/ added back.gif and exult_logo.gif for the html files
	* docs/xml: updated faq.xml, docs.xml, html.xsl, text.xsl

2001-11-24  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* Midi.h: is_track_playing didn't check if midi_device == NULL (Thanks Michael Z.)

2001-11-22 Ryan Nunn <triforce@merlin.net.au>
	* msvcstuff/Exult.dsp : Getting rid of a link warning

2001-11-22 Ryan Nunn <triforce@merlin.net.au>
	* Makefile.*, msvcstuff/*, win32/exultico.rc : Unify Win32 Resource
	  scripts, add Version Table to all Win32 Exult exes.

2001-11-22  Tristan Tarrant <nadir@users.sourceforge.net>
	* data/Makefile.am: added forgotten files so that make dist works again

2001-11-21 Ryan Nunn <triforce@merlin.net.au>
	* Makefile.am: Yes I did kill something (backslashes vs slashes)

2001-11-21 Ryan Nunn <triforce@merlin.net.au>
	* README.win32: Typo

2001-11-21 Ryan Nunn <triforce@merlin.net.au>
	* Makefile.am: Added msvcstuff files to EXTRA_DIST
	* README.win32: Added MSVC build instructions.
	* msvcstuff/Zip.dsp: ZIP File support project for MSVC.
	* msvcstuff/Exult?Tools.dsp: Removing Space in filename.
	* msvcstuff/exconfig/exconfig.dsp: Needs to be Binary in CVS.

2001-11-18  Max Horn  <max@quendi.de>

	* audio/midi_drivers/mac_midi.cc: fixed crash on exit when music is disabled

2001-11-18  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* configure.in: remove check for zutil.h
	* configure.in: link dynamically against zlib

2001-11-18 Ryan Nunn <triforce@merlin.net.au>
	* actors.cc, gamewin.*, gamerend.cc, objs/chunks.* : Ice Dungeons
	* audio/Audio.cc : can_sfx() also looks for Midi SFX, if compiled
	* files/zip/zip.c : Removed dependency on zutil.h
